Presentations/Week4 Sample Code/secretpod/secret-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secretpod
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
