Presentations/Week4 Sample Code/secretpod/secretpod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: secretpod-svc
  namespace: secretpod
  annotations:
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
spec:
  type: LoadBalancer
  selector:
    app: secretpod
    env: blue #green is static; blue is dynamically updated
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
