Presentations/Week4 Sample Code/secretpod/secret-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secretpod-ingress
  namespace: secretpod
  annotations:
    plugins.konghq.com: request-id
    fluxcd.io/ignore: "false"
    linkerd.io/inject: enabled
spec:
  rules:
    - host: secretpod-east.qualscreen.com
      http:
        paths:
          - path: /
            backend:
              serviceName: secretpod-svc
              servicePort: 80
    - host: secretpod-west.qualscreen.com
      http:
        paths:
          - path: /
            backend:
              serviceName: secretpod-svc
              servicePort: 80
